[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Analyze patient inflammation data"
authors = ["Mayodi <mayodi.fernandopulle@ukaea.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
